--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,9 @@
 {
   "name": "purescript-colors",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sharkdp/purescript-colors.git"
+  },
   "ignore": [
     "**/.*",
     "bower_components",
@@ -11,6 +15,6 @@
   },
   "devDependencies": {
     "purescript-test-unit": "^4.1.0",
-    "purescript-flarecheck": "^0.2.1"
+    "purescript-flarecheck": "^0.2.2"
   }
 }
