--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "purescript-integers": "^0.2.1",
     "purescript-orders": "^0.1.1",
+    "purescript-lists": "^0.7.9",
     "purescript-arrays": "^0.4.4",
     "purescript-strings": "^0.7.1"
   },
