--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "type": "git",
     "url": "git://github.com/sharkdp/purescript-colors.git"
   },
+  "license": "MIT",
   "ignore": [
     "**/.*",
     "bower_components",
