--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
     "purescript-test-unit": "^10.0.1",
     "purescript-psci-support": "^2.0.0",
     "purescript-flaredoc": "^2.0.0"
+  },
+  "resolutions": {
+    "purescript-dom": "^3.1.0"
   }
 }
