move interactive example in /example

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
-/bower_components/
 /node_modules/
+/src/.webpack.js
+
+.psc-ide-port
+.psc-package
+
+/bower_components/
 /.pulp-cache/
 /output/
 /.psci*
-/src/.webpack.js
-html/test.js
-.psc-ide-port
-.psc-package
+
+/example/bower_components/
+/example/.pulp-cache/
+/example/output/
+/example/.psci*
+
+/example/html/test.js
