--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "purescript-test-unit": "^11.0.0",
-    "purescript-psci-support": "^3.0.0",
-    "purescript-flaredoc": "^3.0.0"
+    "purescript-psci-support": "^3.0.0"
   }
 }
