--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "build": "pulp test && rimraf docs && pulp docs",
-    "example": "cd example && pulp build -O -m Main -t html/test.js",
+    "build": "bower install && pulp build",
+    "documentation": "cd example && pulp build -O -m Main -t html/test.js",
     "test": "pulp test"
   },
   "devDependencies": {
