--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,12 @@ jobs:
 
       - name: Run tests
         run: spago test --no-install
+
+      - name: Verify Bower & Pulp
+        run: |
+          npm install bower pulp
+          npx bower install
+          npx pulp build -- --censor-lib --strict
+          if [ -d \"test\" ]; then
+            npx pulp test
+          fi
