--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,6 @@ jobs:
           if [ -d \"test\" ]; then
             npx pulp test
           fi
+
+      - name: Verify documetnation
+        run: npm run documentation
