Replace test-unit with assert

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,6 @@
     "purescript-strings": "^5.0.0"
   },
   "devDependencies": {
-    "purescript-test-unit": "^16.0.0"
+    "purescript-assert": "^5.0.0"
   }
 }
