Migrate to contrib standards (#50)
* Run contrib-updater generate; fix a few things

* Drop comments in dhall files

* Update URL in bower.josn file

* Drop Travis CI

* Add bower and pulp verify step

* Verify documentation builds

* Fix compiler warnings on unused names

* Drop dev deps pulp and psa

* Replace test-unit with assert

* Drop `npm run documentation` command and test

Seems this code no longer works

* Add the docs/Readme file again

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "purescript-colors",
   "repository": {
     "type": "git",
-    "url": "git://github.com/sharkdp/purescript-colors.git"
+    "url": "git://github.com/purescript-contrib/purescript-colors.git"
   },
   "license": "MIT",
   "ignore": [
@@ -20,6 +20,6 @@
     "purescript-strings": "^5.0.0"
   },
   "devDependencies": {
-    "purescript-test-unit": "^16.0.0"
+    "purescript-assert": "^5.0.0"
   }
 }
