--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Build source
         run: spago build --no-install --purs-args '--censor-lib --strict'
 
-      - name: Run tests
-        run: spago test --no-install
+#      - name: Run tests
+#        run: spago test --no-install
 
       - name: Verify Bower & Pulp
         run: |
