--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Verify Bower & Pulp
         run: |
-          npm install bower pulp
+          npm install bower pulp@16.0.0-0
           npx bower install
           npx pulp build -- --censor-lib --strict
           if [ -d \"test\" ]; then
