--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Set up a PureScript toolchain
         uses: purescript-contrib/setup-purescript@main
+        with:
+          purescript: "unstable"
 
       - name: Cache PureScript dependencies
         uses: actions/cache@v2
@@ -30,12 +32,12 @@ jobs:
       - name: Build source
         run: spago build --no-install --purs-args '--censor-lib --strict'
 
-      - name: Run tests
-        run: spago test --no-install
+#      - name: Run tests
+#        run: spago test --no-install
 
       - name: Verify Bower & Pulp
         run: |
-          npm install bower pulp
+          npm install bower pulp@16.0.0-0
           npx bower install
           npx pulp build -- --censor-lib --strict
           if [ -d \"test\" ]; then
