Fix miscellaneous things from contrib migration PR (#52)
* Drop package.json file completely

* Drop sharkdp as maintainer

* Run `purs-tidy format-in-place`

* Add tidy to CI

* Address code review comments

Co-authored-by: Thomas Honeyman <hello@thomashoneyman.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
         uses: purescript-contrib/setup-purescript@main
         with:
           purescript: "unstable"
+          purs-tidy: "latest"
 
       - name: Cache PureScript dependencies
         uses: actions/cache@v2
