--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build source
         run: spago build --no-install --purs-args '--censor-lib --strict'
 
-#      - name: Run tests
-#        run: spago test --no-install
+      - name: Run tests
+        run: spago build --no-install --then "node -e \"import { main } from './output/Test.Main/index.js'; main();\" --input-type=module"
 
       - name: Verify Bower & Pulp
         run: |
