--- a/spago.yaml
+++ b/spago.yaml
@@ -24,7 +24,4 @@ package:
       - assert
       - console
       - effect
-workspace:
-  extraPackages: {}
-  packageSet:
-    registry: 60.5.0
+workspace: {}
